added new table users
