# internal/handlers/userHandlers.go
@@ -1,0 +1,90 @@
+package handlers
+
+import (
+	"context"
+	"restapi_project/internal/userService"
+	"restapi_project/internal/web/users"
+)
+
+type UserHandler struct {
+	Service *userService.UserService
+}
+
+func (u UserHandler) GetUsers(ctx context.Context, request users.GetUsersRequestObject) (users.GetUsersResponseObject, error) {
+	allUsers, err := u.Service.GetAllUsers()
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.GetUsers200JSONResponse{}
+
+	for _, usr := range allUsers {
+		user := users.User{
+			Id:       &usr.ID,
+			Email:    &usr.Email,
+			Password: &usr.Password,
+		}
+		response = append(response, user)
+	}
+
+	return response, nil
+}
+
+func (u UserHandler) PostUsers(ctx context.Context, request users.PostUsersRequestObject) (users.PostUsersResponseObject, error) {
+	userRequest := request.Body
+	userToCreate := userService.User{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	createdUser, err := u.Service.CreateUser(userToCreate)
+
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PostUsers201JSONResponse{
+		Id:       &createdUser.ID,
+		Email:    &createdUser.Email,
+		Password: &createdUser.Password,
+	}
+
+	return response, nil
+}
+
+func (u UserHandler) DeleteUsersId(ctx context.Context, request users.DeleteUsersIdRequestObject) (users.DeleteUsersIdResponseObject, error) {
+	userID := request.Id
+	err := u.Service.DeleteUserByID(uint(userID))
+	if err != nil {
+		return nil, err
+	}
+	response := users.DeleteUsersId204Response{}
+	return response, nil
+}
+
+func (u UserHandler) PatchUsersId(ctx context.Context, request users.PatchUsersIdRequestObject) (users.PatchUsersIdResponseObject, error) {
+	userID := request.Id
+	body := request.Body
+
+	userToUpdate := userService.User{
+		Email:    *body.Email,
+		Password: *body.Password,
+	}
+
+	updatedUser, err := u.Service.UpdateUserByID(uint(userID), userToUpdate)
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PatchUsersId200JSONResponse{
+		Id:       &updatedUser.ID,
+		Email:    &updatedUser.Email,
+		Password: &updatedUser.Password,
+	}
+	return response, nil
+}
+
+func NewUserHandler(service *userService.UserService) *UserHandler {
+	return &UserHandler{
+		Service: service,
+	}
+}
